# hivemind

./: .gitignore  Cargo.toml  POLICY.md  README.md  cost_estimate.md  timeline.md
.claude/: settings.local.json
BBC/development_guides/: README.md
BBC/flight_simulators/: README.md
BBC/frames/: README.md
BBC/v0.1.0/: README.md
BBC/v0.2.0/: README.md
CAA/: README.md
financing/: README.md
hw/: README.md
hw/nozzle/: README.md
hw/v1/: README.md
hw/v2/: README.md
hw/wash/: README.md
legion/: Cargo.toml  README.md
legion-core/: Cargo.toml
legion-core/src/: error.rs  lib.rs  state.rs
legion-core/src/executor/: machine.rs  mod.rs  radio_loss.rs  steps.rs
legion-core/src/safety/: check.rs  checks.rs  mod.rs
legion-core/src/traits/: clock.rs  link.rs  mavlink.rs  mod.rs  payload.rs  store.rs
legion-core/tests/: executor.rs  safety.rs
legion-core/tests/common/: mod.rs
legion/src/: clock.rs  config.rs  lib.rs  main.rs  runtime.rs  safety_loop.rs  shared_state.rs
legion/src/cli/: debug.rs  mod.rs  serve.rs
legion/src/comms/: client.rs  link.rs  mod.rs
legion/src/mavlink_driver/: mod.rs  stub.rs
legion/src/payload/: mock.rs  mod.rs
legion/src/store/: file_store.rs  mod.rs
legion/systemd/: legion.service
oracle/: Cargo.toml  README.md
oracle/migrations/: 0001_init.sql
oracle/src/: config.rs  error.rs  lib.rs  main.rs
oracle/src/api/: fleet.rs  intents.rs  mod.rs  plans.rs  ws.rs
oracle/src/apply/: gate.rs  handshake.rs  mod.rs  supervisor.rs
oracle/src/cli/: mod.rs  plan.rs  serve.rs
oracle/src/domain/: amendment.rs  fleet.rs  intent.rs  mod.rs  plan.rs
oracle/src/fleet/: mod.rs  monitor.rs  state.rs
oracle/src/legion_link/: authority.rs  mod.rs  server.rs  session.rs
oracle/src/slicer/: coverage.rs  geometry.rs  mod.rs  radio_loss.rs  resources.rs  schedule.rs  sortie_pack.rs  steps.rs  validate.rs
oracle/src/store/: audit.rs  drones.rs  intents.rs  mod.rs  plans.rs  sorties.rs  steps.rs
oracle/tests/: api_smoke.rs  handshake.rs  slicer.rs
pantheon/: .gitignore  Makefile  README.md  pyproject.toml
pantheon/hivemind_plan_preview/: __init__.py  blender_manifest.toml  cli.py  coords.py  operators.py  plan_loader.py  scene_builder.py  timeline.py  ui.py
pantheon/hivemind_plane_picker/: __init__.py  blender_manifest.toml  intent.py  operators.py  properties.py  ui.py
pantheon/tests/: test_coords.py  test_intent.py  test_plan_loader.py  test_timeline.py
praetor/: .gitignore  Cargo.toml  README.md  tauri.conf.json
praetor/capabilities/: default.json
praetor/src/: config.rs  error.rs  lib.rs  main.rs  state.rs  tauri_commands.rs
praetor/src/gamepad/: binding.rs  intent.rs  mod.rs
praetor/src/mavlink_link/: connect.rs  mod.rs  recv.rs  send.rs  snapshot.rs
praetor/src/safety/: arming.rs  interlock.rs  mod.rs  watchdog.rs
praetor/ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
praetor/ui/src/: App.css  App.tsx
praetor/ui/src/components/: ArmButton.tsx  ConnectionPanel.tsx  EmergencyStop.tsx  PumpIndicator.tsx
praetor/ui/src/components/Hud/: AttitudeIndicator.tsx  BatteryGauge.tsx  GpsBadge.tsx  ModeBadge.tsx
praetor/ui/src/hooks/: useArming.ts  useControllerStatus.ts  useLinkStatus.ts  useTelemetry.ts
praetor/ui/src/lib/: tauri.ts
protocol/: Cargo.toml  README.md
protocol/src/: codec.rs  error.rs  lib.rs  messages.rs  serial.rs  sortie.rs  tcp.rs  telemetry.rs  transport.rs
protocol/tests/: round_trip.rs  streaming.rs  transport_tcp.rs
