[workspace]
resolver = "2"
members = ["protocol", "legion-core", "legion"]
# `oracle` is intentionally excluded from the workspace until its src/
# tree lands; its Cargo.toml is present but has no bin path yet.
exclude = ["oracle"]

[workspace.package]
edition = "2021"
rust-version = "1.75"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"

[workspace.dependencies]
hivemind-protocol = { path = "protocol" }
legion-core = { path = "legion-core" }

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"
tokio = { version = "1.40", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
uuid = { version = "1.10", features = ["v7"] }
futures = "0.3"
